# pult3000

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml
.sisyphus/plans/: 2026-04-12-similar-tracks.md
deploy/: com.kaset-remote-bot.plist  install.sh  update.sh
extension/: content.js  manifest.json  popup.html  popup.js
src/: browser_player.py  config.py  deezer.py  history.py  kaset.py  main.py  music_search.py  queue.py  state.py  whisper_stt.py
src/bot/: keyboards.py  middlewares.py  playback_mode.py  status.py  track_poller.py
src/bot/handlers/: commands.py  controls.py  search.py  similar.py  voice.py
src/kaset_remote_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_browser_player.py  test_kaset.py  test_keyboards.py  test_music_search.py  test_search_handler.py  test_similar_handler.py  test_whisper_stt.py
