[project]
name = "pult3000"
version = "0.1.0"
description = "Telegram remote control for YouTube Music"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.15",
    "aiohttp-socks>=0.9",
    "httpx[socks]>=0.27",
    "requests[socks]>=2.32",
    "ytmusicapi>=1.9",
    "python-dotenv>=1.0",
    "playwright>=1.58.0",
]
